# controller/repository/repository.go
@@ -15,12 +15,13 @@ func InsertOneDoc(db *mongo.Database, collection string, doc interface{}) (inser
 	}
 	return insertResult.InsertedID
 }
-func InsertPenjualan(db *mongo.Database, id int, namaproduk string, jumlahpenjualan int, tanggaldatamasuk string) (InsertedID interface{}, err error) {
+func InsertPenjualan(db *mongo.Database, id int, namaproduk string, jumlahpenjualan int, tanggaldatamasuk string, cabang string) (InsertedID interface{}, err error) {
 	var m model.Penjualan
 	m.ID = id
 	m.NamaProduk = namaproduk
 	m.JumlahPenjualan = jumlahpenjualan
 	m.TanggalDataMasuk = tanggaldatamasuk
+	m.Cabang = cabang
 	return InsertOneDoc(db, "penjualan", m), err
 }
 
@@ -33,12 +34,13 @@ func GetPenjualanByNamaProduk(namaproduk string, db *mongo.Database) (data model
 	}
 	return data, err
 }
-func InsertPengeluaran(db *mongo.Database, id int, nama string, jumlah int, tanggal string) (InsertedID interface{}, err error) {
+func InsertPengeluaran(db *mongo.Database, id int, nama string, jumlah int, tanggal string, cabang string) (InsertedID interface{}, err error) {
 	var m model.Pengeluaran
 	m.ID = id
 	m.Namapengeluaran = nama
 	m.Jumlah = jumlah
 	m.Tanggal = tanggal
+	m.Cabang = cabang
 	return InsertOneDoc(db, "pengeluaran", m), err
 }
 func GetPengeluaranByNama(nama string, db *mongo.Database) (data model.Pengeluaran, err error) {
@@ -49,4 +51,18 @@ func GetPengeluaranByNama(nama string, db *mongo.Database) (data model.Pengeluar
 		fmt.Printf("GetDataPengeluaranFormNama: %v\n", err)
 	}
 	return data, err
+}
+
+func GetAllPengeluaran(cabang string, db *mongo.Database) (data model.Pengeluaran, err error) {
+	user := db.Collection("pengeluaran")
+	filter := bson.M{"cabang": cabang}
+	cursor, err := user.Find(context.TODO(), filter)
+	if err != nil {
+		fmt.Printf("GetAllPengeluaran: %v\n", err)
+	}
+	err = cursor.All(context.TODO(), &data)
+	if err != nil {
+		fmt.Println(err)
+	}
+	return
 }
